@@ -10,6 +10,17 @@ Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)
 
 	CHANGES:  	explanation of codification changes
 
+2014/09/10 - jgonzale - Simulator
+	BUGFIX:		Added rounding correction when translating times from
+				the Dimemas core ('dimemas_timer' -> 'double') to Paraver
+				trace ('prv_time_t' -> 'unsiged long long').
+
+				*NOTE: This precission adjustements should be corrected all
+				accross the simulator core, as the PRINT_TIMER macro does
+				truncate the 'dimemas_timer' it receives.
+
+				May have sense to work with integer in the simulator core?*
+
 2014/09/05 - jgonzale - Simulator | prv2dim - 5.2.8
 	BUGFIX:		The management of parameter '--lat' was incorrect when
 				using the new configuration files
